# manymouser

./: Cargo.toml  README.md
manymouser/: Cargo.toml  build.rs
manymouser/src/: drivers.rs  lib.rs  main.rs
manymouser/src/drivers/: bindgen.rs  linux_evdev.rs  manymouse_driver.rs
src/: lib.rs  linux_evdev.rs  main.rs
