[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
name = "manymouser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.10.2"
input-linux-sys = "*"
nix = "0.19.1"

[build-dependencies]
cc = "1.0"
